[gd_scene load_steps=6 format=3 uid="uid://b2ii428vvgrvf"]

[ext_resource type="Script" path="res://scripts/ResultPanel.gd" id="1_nnkuf"]

[sub_resource type="FontFile" id="FontFile_eyllt"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/50/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/100/0/ascent = 0.0
cache/0/100/0/descent = 0.0
cache/0/100/0/underline_position = 0.0
cache/0/100/0/underline_thickness = 0.0
cache/0/100/0/scale = 1.0
cache/0/100/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/100/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_psxcs"]
font = SubResource("FontFile_eyllt")
font_size = 100

[sub_resource type="LabelSettings" id="LabelSettings_pspo6"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_vx741"]
font_size = 50

[node name="ResultPanel" type="PanelContainer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_nnkuf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4

[node name="ResultText" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "SAMPLE"
label_settings = SubResource("LabelSettings_psxcs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayAgainButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PlayAgainButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -34.5
offset_right = 125.0
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
text = "Play Again"
label_settings = SubResource("LabelSettings_pspo6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/CloseButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -34.5
offset_right = 65.0
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
text = "Close
"
label_settings = SubResource("LabelSettings_vx741")
horizontal_alignment = 1
vertical_alignment = 1
